--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
+/*scrolll  remove
+html {
+    scroll-behavior: smooth;
+    scrollbar-width: none; 
+    -ms-overflow-style: none;
+}
 
+
+/* Hide scrollbar for Chrome, Safari, and Opera */
+
+::-webkit-scrollbar {
+    display: none;
+}
